Make code more readable in listeners